Set Start Date & End Date For DatePickers

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,4 +54,13 @@ body {
   padding: 10px;
 }
 
+/* DatePicker */
+.react-datetime-picker input:focus {
+  outline: none;
+}
+
+.react-datetime-picker__wrapper {  
+  border: none;
+}
+
 
