--- a/src/styles.css
+++ b/src/styles.css
@@ -63,4 +63,15 @@ body {
   border: none;
 }
 
+/* Fabs */
+.fab {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  padding: 25px;
+  position: fixed;
+  right: 25px;
+}
+
+
 
