--- a/src/styles.css
+++ b/src/styles.css
@@ -74,5 +74,12 @@ body {
   z-index: 4;
 }
 
+.fab-danger {
+  bottom: 25px;
+  padding: 10px;
+  position: fixed;
+  left: 25px;
+  z-index: 1000;
+}
 
 
